# my-tauri-app

./: package-lock.json  package.json
src/: App.tsx
src-tauri/: 2  Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
